templates/ingress/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${ingress_name}
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   add_header X-Frame-Options "SAMEORIGIN";
    #   add_header X-XSS-Protection "1; mode=block";
    #   add_header X-Content-Type-Options "nosniff";
    #   add_header Strict-Transport-Security "max-age=15552000; includeSubDomains; preload";
    #   add_header Upgrade $http_upgrade;
    #   add_header Connection "upgrade";
spec:
  externalIPs:
    - 192.168.4.144
  ingressClassName: nginx
  tls:
    - hosts:
      - ${ingress_host}
      secretName: ${ingress_name}-tls
  rules:
  - host: ${ingress_host}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${ingress_service_name}
            port:
              number: ${ingress_service_port}
